test_regress/t/t_func_bad3.out
%Error-UNSUPPORTED: t/t_func_bad3.v:12:27: Unsupported: Recursive function call 'recurse_self'
   12 |       else recurse_self = recurse_self(i - 1) + 1;
      |                           ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
